<resources>
    <string name="app_name">Smash Tourney</string>

    <string name="create_tourney_label">Create new tourney</string>
    <string name="list_tourneys_label">List tourneys</string>

    <string name="tourney_title_label">Title:</string>
    <string name="tourney_date_label">Date:</string>
    <string name="tourney_time_label">Time:</string>
    <string name="create_tourney_button_text">Create</string>
    <string name="create_tourney_progress">"Creating tourney…"</string>
    <string name="create_tourney_success">Tourney created successfully!</string>
    <string name="create_tourney_error">Failed to create the tourney. Try again later.</string>

    <string name="list_tourneys_progress">Loading tourneys…</string>
    <string name="list_tourneys_error">Failed to load the tourneys. Try again later.</string>
    <string name="no_tourneys">No tourneys available.</string>
    <string name="tourney_title_empty">(No title)</string>

    <string name="view_tourney_label">Tourney details</string>
    <string name="view_tourney_progress">Loading tourney…</string>
    <string name="view_tourney_no_such_tourney_error">The selected tourney isn\'t available anymore.</string>
    <string name="view_tourney_load_error">Failed to load the tourney. Try again later.</string>
    <string name="view_tourney_player_progress">Loading players…</string>
    <string name="view_tourney_player_error">There was an error while trying to load the players in this tourney.</string>
    <string name="view_tourney_player_no_players">No players have been added to this tourney yet.</string>
    <string name="view_tourney_player_label">%1$s (%2$s)</string>
    <string name="enter_results_label">Enter results</string>

    <string name="add_player_label">Add player</string>
    <string name="player_nickname_label">Player\'s nickname:</string>
    <string name="player_fighter_label">Fighter:</string>
    <string name="fighter_random">Random</string>
    <string name="add_player_progress">Adding player…</string>
    <string name="add_player_missing_nickname_error">You need to enter the player\'s nickname.</string>
    <string name="add_player_missing_fighter_error">You need to choose the player\'s fighter.</string>
    <string name="add_player_duplicate_nickname_error">Player %1$s has already been added to this tourney. Enter a different nickname.</string>
    <string name="add_player_error">Failed to add the player to the tourney. Try again later.</string>

    <string name="load_players_progress">Loading players…</string>
    <string name="load_players_error">Failed to load the players. Try again later.</string>
    <string name="tourney_champion_label">Champion:</string>
    <string name="tourney_runner_ups_label">Runner-ups:</string>
    <string name="enter_results_progress">Entering tourney results…</string>
    <string name="enter_results_missing_champion_error">You need to choose the champion.</string>
    <string name="enter_results_missing_runner_up_error">You need to choose at least one runner-up.</string>
    <string name="enter_results_runner_up_is_champion_error">It\'s not possible to choose the same player as champion and runner-up.</string>
    <string name="enter_results_error">Failed to enter the tourney results. Try again later.</string>
</resources>
