<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.gmail.cristiandeives.smashtourney.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_main_new_tourney"
            app:destination="@id/newTourneyFragment"
            app:enterAnim="@animator/frag_enter"
            app:exitAnim="@animator/frag_exit"
            app:popEnterAnim="@animator/frag_pop_enter"
            app:popExitAnim="@animator/frag_pop_exit" />
        <action
            android:id="@+id/action_main_list_tourneys"
            app:destination="@id/listTourneysFragment"
            app:enterAnim="@animator/frag_enter"
            app:exitAnim="@animator/frag_exit"
            app:popEnterAnim="@animator/frag_pop_enter"
            app:popExitAnim="@animator/frag_pop_exit" />
    </fragment>
    <fragment
        android:id="@+id/newTourneyFragment"
        android:name="com.gmail.cristiandeives.smashtourney.NewTourneyFragment"
        android:label="@string/create_tourney_label"
        tools:layout="@layout/fragment_new_tourney" >
        <action
            android:id="@+id/action_new_tourney_date_picker"
            app:destination="@id/datePickerDialogFragment" />
        <action
            android:id="@+id/action_new_tourney_time_picker"
            app:destination="@id/timePickerDialogFragment" />
    </fragment>
    <dialog
        android:id="@+id/datePickerDialogFragment"
        android:name="com.gmail.cristiandeives.smashtourney.DatePickerDialogFragment"
        android:label="DatePickerDialogFragment" >
        <argument
            android:name="year"
            app:argType="integer" />
        <argument
            android:name="month"
            app:argType="integer" />
        <argument
            android:name="dayOfMonth"
            app:argType="integer" />
    </dialog>
    <dialog
        android:id="@+id/timePickerDialogFragment"
        android:name="com.gmail.cristiandeives.smashtourney.TimePickerDialogFragment"
        android:label="TimePickerDialogFragment" >
        <argument
            android:name="hour"
            app:argType="integer" />
        <argument
            android:name="minute"
            app:argType="integer" />
    </dialog>
    <fragment
        android:id="@+id/listTourneysFragment"
        android:name="com.gmail.cristiandeives.smashtourney.ListTourneysFragment"
        android:label="@string/list_tourneys_label"
        tools:layout="@layout/fragment_list_tourneys" >
        <action
            android:id="@+id/action_list_tourneys_view_tourney"
            app:destination="@id/viewTourneyFragment"
            app:enterAnim="@animator/frag_enter"
            app:exitAnim="@animator/frag_exit"
            app:popEnterAnim="@animator/frag_pop_enter"
            app:popExitAnim="@animator/frag_pop_exit" />
    </fragment>
    <fragment
        android:id="@+id/viewTourneyFragment"
        android:name="com.gmail.cristiandeives.smashtourney.ViewTourneyFragment"
        android:label="@string/view_tourney_label"
        tools:layout="@layout/fragment_view_tourney" >
        <argument
            android:name="tourneyId"
            app:argType="string" />
        <action
            android:id="@+id/action_view_tourney_join_tourney"
            app:destination="@id/joinTourneyFragment"
            app:enterAnim="@animator/frag_enter"
            app:exitAnim="@animator/frag_exit"
            app:popEnterAnim="@animator/frag_pop_enter"
            app:popExitAnim="@animator/frag_pop_exit" />
    </fragment>
    <fragment
        android:id="@+id/joinTourneyFragment"
        android:name="com.gmail.cristiandeives.smashtourney.JoinTourneyFragment"
        android:label="@string/join_tourney_label"
        tools:layout="@layout/fragment_join_tourney" >
        <argument
            android:name="tourneyId"
            app:argType="string" />
    </fragment>
</navigation>
